Add wavesurfer, the waveform renderer

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libass-wasm"]
 	path = libass-wasm
 	url = https://github.com/monkey-sheng/libass-wasm
+[submodule "wavesurfer"]
+	path = wavesurfer
+	url = https://github.com/monkey-sheng/wavesurfer.js
